@@ -380,6 +380,10 @@ IDLE
 Tests
 -----
 
+- Issue #24751: When running regrtest with the ``-w`` command line option,
+  a test run is no longer marked as a failure if all tests succeed when
+  re-run.
+
 - Issue #21520: test_zipfile no longer fails if the word 'bad' appears
   anywhere in the name of the current directory.
 
